# ambix

./: .project_metadata.py  .travis.yml  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yml  main.yml
ambix/: cli.py  exceptions.py  migration_home.py  migration_script.py  tools.py  utilities.py
ambix/commands/: flatten.py  move.py  prune.py  rebase.py  render.py
tests/: conftest.py  test_migration_home.py  test_migration_script.py
tests/data/: aaaaaa-dummy-migration.py  bbbbbb-dummy-migration.py  cccccc-dummy-migration.py  dddddd-dummy-migration.py  eeeeee-dummy-migration.py  ffffff-dummy-migration.py  gggggg-dummy-migration.py
