[tool.poetry]
name = "ambix"
version = "1.0.0"
description = "alembic history cleaning tool"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.2"
py-buzz = "^2.1.3"
redbaron = "^0.9.2"
toposort = "^1.6"
loguru = "^0.5.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
alembic = "^1.5.8"
black = "^20.8b1"
isort = "^5.8.0"
pytest-random-order = "^1.0.4"
pytest-cov = "^2.11.1"
pytest-sugar = "^0.9.4"

[tool.black]
line-length = 120

[tool.isort]
src_paths = ["app", "tests"]
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
ambix = 'ambix.cli:cli'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--random-order"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
